# trabalho-1-so

./: .gitignore  CMakeLists.txt  README.md
include/: File.h  Matriz.h  MultiplyMatrix.h  Operations.h  index.h
src/: matriz_sequencial.cpp  sequencial
src/assistant/: assistant  assistant.cpp
src/implementation/: File.cpp  Matriz.cpp  Operation.cpp
src/process/: matriz_processos.cpp
src/sequential/: matriz_sequencial.cpp  sequential  sequential.cpp
src/threads/: matriz.threads.cpp
